# space-fight-game

./: CMakeLists.txt  README.md
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/VFX/: Particle.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Delegate.h  MathUtils.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
LightYearsEngine/include/gameplay/: GameStage.h  WaitStage.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/VFX/: Particle.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUtils.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
LightYearsEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/VFX/: Explosion.h
LightYearsGame/include/enemy/: EnemySpaceship.h  Hexagon.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UFO.h  UFOStage.h  Vanguard.h  VanguardStage.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/include/gameplay/: HealthComponent.h
LightYearsGame/include/level/: GameLevelOne.h
LightYearsGame/include/player/: PlayerSpaceship.h
LightYearsGame/include/spaceship/: Spaceship.h
LightYearsGame/include/weapon/: Bullet.h  BulletShooter.h  Shooter.h
LightYearsGame/src/VFX/: Explosion.cpp
LightYearsGame/src/enemy/: EnemySpaceship.cpp  Hexagon.cpp  HexagonStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UFO.cpp  UFOStage.cpp  Vanguard.cpp  VanguardStage.cpp
LightYearsGame/src/gameFramework/: GameApplication.cpp
LightYearsGame/src/gameplay/: HealthComponent.cpp
(+6 files in other folders)
